# OMG-Agent

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: build-release.yaml
docs/: ARCHITECTURE_zh.md  COMPLEX_TASK_DESIGN_zh.md  development.md  development_zh.md  emulator_setup.md  emulator_setup_zh.md  model-config.md  model-config_zh.md  setup.md  setup_zh.md
omg_agent/: __init__.py  __main__.py
omg_agent/core/: __init__.py  config.py  i18n.py  task_history.py
omg_agent/core/agent/: __init__.py  history.py  phone_agent.py  planner.py  session.py
omg_agent/core/agent/actions/: __init__.py  handler.py  parser.py  space.py
omg_agent/core/agent/device/: __init__.py  apps.py  screenshot.py
omg_agent/core/agent/examples/: __init__.py  basic_usage.py
omg_agent/core/agent/llm/: __init__.py  client.py  message.py
omg_agent/core/agent/prompts/: __init__.py  autoglm.py  step.py  system.py
omg_agent/gui/: __init__.py  main_window.py  themes.py  widgets.py
tests/: __init__.py  conftest.py  test_actions.py
